Convert to actual fx project Started changing xml to gson